@@ -4,6 +4,8 @@ ver 0.21.25 (not yet released)
 * input
   - file: detect premature end of file
   - smbclient: don't send credentials to MPD clients
+* decoder
+  - opus: apply pre-skip
 * output
   - osx: improve sample rate selection
 * Windows/Android:
